[package]
name = "ymapi"
version = "0.1.0"
edition = "2021"

[[example]]
name = "status"
path = "examples/status.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
